--- a/libsecurity/CMakeLists.txt
+++ b/libsecurity/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB HEADERS "*.h")
 
 add_library(security ${SRC_LIST} ${HEADERS})
 target_link_libraries(security PUBLIC JsonCpp)
-target_link_libraries(security PRIVATE devcrypto TBB)
+target_link_libraries(security PRIVATE devcrypto TBB storage)
