--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - 'v3.*.*'
   release:
-    types: [published, created, push]
+    types: [published, created, edited]
 
 env:
   DOCKER_REPOSITORY: fiscobcos
