--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,7 +129,7 @@ jobs:
           source /opt/rh/rh-perl530/enable
           export LIBCLANG_PATH=/opt/rh/llvm-toolset-7/root/lib64/
           source /opt/rh/llvm-toolset-7/enable
-          cmake3 . -DCMAKE_BUILD_TYPE=Debug -DBUILD_STATIC=ON -DTESTS=OFF
+          cmake3 . -DCMAKE_BUILD_TYPE=Release -DBUILD_STATIC=ON -DTESTS=OFF
           make -j4
           make tar
       - name: tar fisco-bcos for CentOS
@@ -190,3 +190,23 @@ jobs:
           asset_name: build_chain.sh
           tag: ${{ github.ref }}
           overwrite: true
+      - name: configure and compile relwithdeb
+        run: |
+          source /opt/rh/devtoolset-10/enable
+          source /opt/rh/rh-perl530/enable
+          export LIBCLANG_PATH=/opt/rh/llvm-toolset-7/root/lib64/
+          source /opt/rh/llvm-toolset-7/enable
+          cmake3 . -DBUILD_STATIC=ON -DTESTS=OFF
+          make -j4
+          make tar
+      - name: tar fisco-bcos for CentOS
+        run:  mkdir bin && mv fisco-bcos-air/fisco-bcos bin && cd bin && tar -cvzf fisco-bcos-relwithdebinfo.tar.gz fisco-bcos
+      - name: Upload fisco-bcos binaries to release
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: bin/fisco-bcos-relwithdebinfo.tar.gz
+          asset_name: fisco-bcos-linux-x86_64-relwithdebinfo.tar.gz
+          tag: ${{ github.ref }}
+          overwrite: true      
+    
