--- a/.github/workflows/workflow-self-hosted-arm.yml
+++ b/.github/workflows/workflow-self-hosted-arm.yml
@@ -29,6 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          fetch-depth: 1
           clean: false
 
       - name: Prepare centos tools
