--- a/.github/workflows/workflow-self-hosted-ubuntu.yml
+++ b/.github/workflows/workflow-self-hosted-ubuntu.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          fetch-depth: 1
           clean: false
       - name: Set up JDK 1.8
         uses: actions/setup-java@v3
